[release-later] Detect Node.js for these languages only: CSS, JavaScript, TypeScript